// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSettlements test getting settlements 1`] = `
Object {
  "settlements": Object {
    "__typename": "SettlementsConnection",
    "nodes": Array [
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GKLEq7o3zZCGAeokuSoAMbmxamJ2uXJ984Fg8xYpaaWMUPr",
        ],
        "blockId": 139,
        "legs": Array [
          Object {
            "amount": "100",
            "from": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": "0",
            },
            "ticker": "4TICKER",
            "to": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": "1",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5DcLNmYXCC8J1hLHJsbtPFNX7kSDx4YTbgGkNYcHUKdvbgU9",
        ],
        "blockId": 262,
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11ATICKER",
            "to": Object {
              "did": "0x6507cde10425d03a8964c5937ccb5760a95d4fd1cda5fc8cdadad8b51e13a38f",
              "number": "0",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5FA8HQPMNmidk6X2h9dfZUEivwRt6ju4cgtpHPEcbB62veMW",
          "5EXPTATZUFcAR9ao5qp9UVaYPoprDpQZFhuVpyibFhA3gmCY",
          "5Hmn2MX8PEd7rBfmXywhAfMvr77FkVy94PyMGncWabDbFVJ7",
          "5DUtBYagbSiwaVdgK54ka26dtdykVn5M71DduDdw64M659EW",
        ],
        "blockId": 294,
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": "0",
            },
            "ticker": "11BTICKER2",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x553aa64ffcf49987f124633a835e6363a413cfbd10fb2b77ad8bf17afc7606ff",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2fbb6ef977181d14c7714e134cd5382d42e4214aaf81a2e60b57663946b644c5",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x1c18365371d85ae8662de63bfb0fb90da99b93482e8f043de61ffc83994f8858",
              "number": "0",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5FcXLkN8fkcr65qg8ZJpjZ4Aeqk8HBvXKdDmSK2zUwB4EJsc",
        ],
        "blockId": 327,
        "legs": Array [
          Object {
            "amount": 1000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "12TICKER",
            "to": Object {
              "did": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
              "number": "0",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5Ev8nm5CBFm3FRvjso95EbCmVM44WRcZRyH4jgXv6CpLvxTa",
        ],
        "blockId": 354,
        "legs": Array [
          Object {
            "amount": 100000000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "13TICKER",
            "to": Object {
              "did": "0x6c15581b6ded46773fbb9786b44624fb2d44397f89bfd71b077462c22ac4b72d",
              "number": "0",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5CaWrWYw133scCHRLGBkQv9ssdFFnanPSZhQHmo8ARMeK79Z",
          "5GqANhefumSBPko8oLdKAH8No6Wk7iN4kzgesvqxyQMupfSu",
        ],
        "blockId": 380,
        "legs": Array [
          Object {
            "amount": 1000,
            "from": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": "0",
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": "0",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5CaWrWYw133scCHRLGBkQv9ssdFFnanPSZhQHmo8ARMeK79Z",
        ],
        "blockId": 383,
        "legs": Array [
          Object {
            "amount": 40,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": "0",
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": "0",
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GqANhefumSBPko8oLdKAH8No6Wk7iN4kzgesvqxyQMupfSu",
        ],
        "blockId": 384,
        "legs": Array [
          Object {
            "amount": 10,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": "0",
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": "0",
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5D9n9c1fCKa6uLf2aZHHFKk3oSPwuPTGvfnjgRbzptzownBH",
        ],
        "blockId": 729,
        "legs": Array [
          Object {
            "amount": "10",
            "from": Object {
              "did": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
              "number": "0",
            },
            "ticker": "15TICKER",
            "to": Object {
              "did": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
              "number": "1",
            },
          },
        ],
        "result": "Executed",
      },
    ],
    "totalCount": 9,
  },
}
`;

exports[`getSettlements test getting settlements with from filter 1`] = `
Object {
  "settlements": Object {
    "__typename": "SettlementsConnection",
    "nodes": Array [
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5DcLNmYXCC8J1hLHJsbtPFNX7kSDx4YTbgGkNYcHUKdvbgU9",
        ],
        "blockId": 262,
        "id": "262/1",
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11ATICKER",
            "to": Object {
              "did": "0x6507cde10425d03a8964c5937ccb5760a95d4fd1cda5fc8cdadad8b51e13a38f",
              "number": "0",
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5FA8HQPMNmidk6X2h9dfZUEivwRt6ju4cgtpHPEcbB62veMW",
          "5EXPTATZUFcAR9ao5qp9UVaYPoprDpQZFhuVpyibFhA3gmCY",
          "5Hmn2MX8PEd7rBfmXywhAfMvr77FkVy94PyMGncWabDbFVJ7",
          "5DUtBYagbSiwaVdgK54ka26dtdykVn5M71DduDdw64M659EW",
        ],
        "blockId": 294,
        "id": "294/5",
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": "0",
            },
            "ticker": "11BTICKER2",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x553aa64ffcf49987f124633a835e6363a413cfbd10fb2b77ad8bf17afc7606ff",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2fbb6ef977181d14c7714e134cd5382d42e4214aaf81a2e60b57663946b644c5",
              "number": "0",
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x1c18365371d85ae8662de63bfb0fb90da99b93482e8f043de61ffc83994f8858",
              "number": "0",
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5FcXLkN8fkcr65qg8ZJpjZ4Aeqk8HBvXKdDmSK2zUwB4EJsc",
        ],
        "blockId": 327,
        "id": "327/1",
        "legs": Array [
          Object {
            "amount": 1000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "12TICKER",
            "to": Object {
              "did": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
              "number": "0",
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "5Ev8nm5CBFm3FRvjso95EbCmVM44WRcZRyH4jgXv6CpLvxTa",
        ],
        "blockId": 354,
        "id": "354/1",
        "legs": Array [
          Object {
            "amount": 100000000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "13TICKER",
            "to": Object {
              "did": "0x6c15581b6ded46773fbb9786b44624fb2d44397f89bfd71b077462c22ac4b72d",
              "number": "0",
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5CaWrWYw133scCHRLGBkQv9ssdFFnanPSZhQHmo8ARMeK79Z",
        ],
        "blockId": 383,
        "id": "383/6",
        "legs": Array [
          Object {
            "amount": 40,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": "0",
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": "0",
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "5GqANhefumSBPko8oLdKAH8No6Wk7iN4kzgesvqxyQMupfSu",
        ],
        "blockId": 384,
        "id": "384/6",
        "legs": Array [
          Object {
            "amount": 10,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": "0",
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": "0",
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": "0",
            },
          },
        ],
      },
    ],
    "totalCount": 6,
  },
}
`;
